--- a/app/globals.css
+++ b/app/globals.css
@@ -1,26 +1,16 @@
 @import "tailwindcss";
 
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
+
+
+@theme {
+  --color-blue: #0C4572;
+  --color-red: #A91F23;
+  --color-gray:#636366;
+  --color-dark-gray:#363536;
+  --color-creama: #EEEBE3;
+
+  --font-montserrat:'Montserrat Variable', sans-serif;
+  --font-lato: 'Lato', sans-serif;
+  --font-inter: 'Inter Variable', sans-serif;
 }
 
-@theme inline {
-  --color-background: var(--background);
-  --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
-}
-
-body {
-  background: var(--background);
-  color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
-}
